force-app/main/default/objects/Movie_Review__c/Movie_Review__c.object-meta.xml
<CustomObject>
    <label>Movie Review</label>
    <nameField>
        <displayFormat>MR-{000000}</displayFormat>
        <label>Movie Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Movie Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>