force-app/main/default/objects/Movie_Review__c/fields/Movie__c.field-meta.xml
<CustomField>
    <fullName>Movie__c</fullName>
    <label>Movie</label>
    <referenceTo>Movie__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>MasterDetail</type>
</CustomField>