force-app/main/default/objects/Movie_Review__c/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <label>Nickname</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>