force-app/main/default/objects/Movie_Review__c/validationRules/Score_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Score_Range</fullName>
    <active>true</active>
    <errorConditionFormula
  >OR(Score__c &lt; 0, Score__c &gt; 5)</errorConditionFormula>
    <errorMessage>Score must be between 0 and 5 stars.</errorMessage>
</ValidationRule>